# boilerplate-fastapi-poetry-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/routers/: items.py  users.py
