[tool.poetry]
name = "boilerplate-fastapi-poetry-docker"
version = "0.1.0"
description = "FastAPI, Poetry, Docker Boilerplate"
authors = ["Cecilia Lee <ceciliahslee@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
